# pixel-model2-rust

./: .gitignore  0_Test (windows-latest, x86_64-pc-windows-msvc).txt  1_Test (ubuntu-latest, x86_64-unknown-linux-gnu).txt  2_Test (macos-latest, x86_64-apple-darwin).txt  3_Integration Tests.txt  Cargo.toml  DEVELOPMENT.md  LICENSE-MIT  README.md  ROM_SYSTEM.md  config.toml  install.bat  install.sh  integration_test.rs  test_rom_loading.rs
Integration Tests/: 11_Post Cache dependencies.txt  12_Post Checkout code.txt  13_Complete job.txt  1_Set up job.txt  2_Checkout code.txt  3_Install ALSA development libraries.txt  4_Install Rust.txt  5_Cache dependencies.txt  6_Run integration tests.txt  system.txt
Test (macos-latest, x86_64-apple-darwin)/: 18_Post Checkout code.txt  19_Complete job.txt  1_Set up job.txt  2_Checkout code.txt  4_Install Rust.txt  5_Cache dependencies.txt  6_Check formatting.txt  7_Check clippy.txt  8_Run tests.txt  9_Build release.txt  system.txt
Test (ubuntu-latest, x86_64-unknown-linux-gnu)/: 18_Post Checkout code.txt  19_Complete job.txt  1_Set up job.txt  2_Checkout code.txt  3_Install ALSA development libraries (Linux).txt  4_Install Rust.txt  5_Cache dependencies.txt  6_Check formatting.txt  7_Check clippy.txt  8_Run tests.txt  system.txt
Test (windows-latest, x86_64-pc-windows-msvc)/: 18_Post Checkout code.txt  19_Complete job.txt  1_Set up job.txt  2_Checkout code.txt  4_Install Rust.txt  5_Cache dependencies.txt  6_Check formatting.txt  7_Check clippy.txt  8_Run tests.txt  system.txt
benches/: cpu_benchmark.rs  memory_benchmark.rs
src/: lib.rs  main.rs  main_gui.rs
tests/: cpu_execution_tests.rs  execution_tests.rs  gpu_rendering_tests.rs  (+4 more)
(+44 files in other folders)
