[package]
name = "pixel-model2-rust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "SEGA Model 2 arcade system emulator written in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/pixel-model2-rust"
keywords = ["emulator", "sega", "model2", "arcade", "gaming"]
categories = ["games", "emulators"]

[dependencies]
# Graphics and rendering
wgpu = "0.19"
winit = "0.29"
pollster = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }
image = "0.25"

# GUI
egui = "0.26"
egui-wgpu = "0.26"
egui-winit = "0.26"

# Audio
cpal = "0.16"
rubato = "0.16"

# Math and utilities
glam = "0.30"
nalgebra = "0.34"
num-traits = "0.2"
bitflags = "2.4"

# File I/O and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"

# Logging and debugging
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"

# Performance and threading
rayon = "1.8"
crossbeam = "0.8"
parking_lot = "0.12"

# Memory mapping and file handling
memmap2 = "0.9"

# ROM handling and compression
zip = "0.6"
flate2 = "1.0"
crc32fast = "1.3"
md5 = "0.8"
sha2 = "0.10"
walkdir = "2.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "cpu_benchmark"
harness = false

[[bench]]
name = "memory_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
debug = true